force-app/main/default/objects/Transaction_Journal_Update__e/Transaction_Journal_Update__e.object-meta.xml
<CustomObject>
    <description>Platform event to update Transaction Journal</description>
    <label>Transaction Journal Update</label>
    <pluralLabel>Transaction Journal Updates</pluralLabel>
</CustomObject>