force-app/main/default/objects/Transaction_Journal_Update__e/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>