force-app/main/default/objects/Transaction_Journal_Update__e/fields/Voucher_Code_Issued__c.field-meta.xml
<CustomField>
    <fullName>Voucher_Code_Issued__c</fullName>
    <label>Voucher Code Issued</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>